Ensure all related padding is reduced together when screen is too small
Also ensure top menu button doesn't have a bottom border

--- a/assets/erudite60em.css
+++ b/assets/erudite60em.css
@@ -9,6 +9,14 @@
 	border: 0;
 }
 
+#bodyContent,
+.message *,
+#footer {
+	padding-left: 2em;
+	padding-right: 2em;
+}
+
 #bodyContent {
-	padding: 1em 2em 0em;
+	padding-top: 1em;
+	padding-bottom: 0em;
 }
